--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,4 @@ description: A simple webpage for a simples physicist
 show_downloads: True
 navigation:
   - title: Home
-    url: /
-  - title: Setup
-    url: setup
+    url: 
